Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <!-- Contato -->
         <h2>📬 Contato</h2>
         <div class="card">
-            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/SEU-LINK" target="_blank">Clique aqui</a></p>
-            <p><strong>Email:</strong> SEU-EMAIL</p>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/franciscodasneto/" target="_blank">Clique aqui</a></p>
+            <p><strong>Email:</strong> franciscodsnetoo@gmail.com</p>
         </div>
     </div>
 
