--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Francisco da Silva Neto - Portfólio</title>
+    <title>Francisco da Silva Neto - Portfólio</title>\
+    <link rel="icon" type="image/png" href="FranciscooNeto.github.io\img\programmer_4082286.png">
+
 
     <!-- Bootstrap CSS -->
     <link
