Atualizar ícone de favicon no portfólio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Francisco da Silva Neto - Portfólio</title>\
-    <link rel="icon" type="image/png" href="FranciscooNeto.github.io\img\programmer_4082286.png">
+    <link rel="icon" type="image/png" href="FranciscooNeto.github.io\img\man_4247822.png">
 
 
     <!-- Bootstrap CSS -->
