Simplify project description in index.html
Updated project description to be more concise.

--- a/index.html
+++ b/index.html
@@ -290,9 +290,7 @@
               </div>
               <div class="project-body">
                 <p>
-                  Espaço reservado para seus próximos projetos. Atualize este
-                  portfólio com seus novos desenvolvimentos e conquistas
-                  profissionais.
+                  Espaço reservado para um próximo projeto.
                 </p>
                 <div class="text-center mt-4">
                   <i class="fas fa-plus-circle fa-3x text-muted"></i>
