Simplify backend developer description

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             Olá, sou <span class="text-primary">Francisco da Silva Neto</span>
           </h1>
           <p class="lead mb-4 text-light">
-            Desenvolvedor Backend | Especialista em Python | AWS & DevOps
+            Desenvolvedor Backend | Python | AWS & DevOps
           </p>
           <p class="subtitle mb-5">
             Transformando dados em soluções escaláveis e eficientes
